<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionGroup="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.alain.cursos.top.DetalleActivity"
    tools:showIn="@layout/activity_detalle">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            style="@style/MyTheme.DayNigth.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/addArtist_help_required"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/artist_hint_nombre"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_maxLenght" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilApellido"
            style="@style/MyTheme.DayNigth.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/addArtist_help_required"
            app:startIconDrawable="@drawable/ic_person">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApellidos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/artist_hint_apellidos"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="@integer/nombre_maxLenght"
                android:nextFocusForward="@id/etEstatura" />
            />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTheme.DayNigth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_weight="50"
                app:startIconDrawable="@drawable/ic_insert_invitation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFechaNacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/artist_hint_fechaNacimiento" />
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTheme.DayNigth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_weight="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEdad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/artist_hint_edad"
                    android:inputType="number"
                    android:maxLength="@integer/estatura_maxLenght" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEstatura"
                style="@style/MyTheme.DayNigth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_padding_min"
                android:layout_weight="50"
                app:helperText="@string/addArtist_help_estaturaMin"
                app:startIconDrawable="@drawable/ic_insert_invitation">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEstatura"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/artist_hint_estatura"
                    android:inputType="number"
                    android:maxLength="@integer/estatura_maxLenght" />
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/MyTheme.DayNigth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_padding_min"
                android:layout_weight="50">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etOrden"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/artist_hint_orden"
                    android:transitionName="@string/tn_Order" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLugarNacimiento"
            style="@style/MyTheme.DayNigth.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:startIconDrawable="@drawable/ic_place">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/etLugarNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:hint="@string/artist_hint_lugarNacimiento"
                android:inputType="textAutoComplete" />

            android:maxLength="@integer/lugarNacimiento_maxLenght" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNotas"
            style="@style/MyTheme.DayNigth.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/item_padding_vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNotas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:gravity="top|start"
                android:hint="@string/artist_hint_notas"
                android:inputType="textMultiLine"
                android:maxLength="@integer/notas_maxLenght"
                android:transitionName="@string/tn_note" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
