<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="@dimen/item_height_threeLine"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true"
    android:paddingTop="@dimen/item_padding_vertical"
    app:cardUseCompatPadding="true">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgFoto"
        android:transitionName="@string/transition_name_photo"
        android:layout_width="@dimen/img_item_size"
        android:layout_height="@dimen/img_item_size"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:src="@drawable/ic_account_box"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvOrden"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/item_padding_horizontal"
        android:drawableBottom="@drawable/ic_star"
        android:gravity="center"
        android:hint="@string/artist_hint_orden"
        android:textSize="@dimen/item_text_size_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNombre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/item_padding_horizontal"
        android:layout_marginStart="@dimen/item_padding_horizontal"
        android:layout_toStartOf="@+id/tvOrden"
        android:layout_toEndOf="@id/imgFoto"
        android:hint="@string/artist_hint_nombre"
        android:textAppearance="@style/ItemLarge"
        app:layout_constraintEnd_toStartOf="@id/tvOrden"
        app:layout_constraintStart_toEndOf="@id/imgFoto"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvNote"
        android:transitionName="@string/tn_note"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/item_padding_vertical"
        android:hint="@string/artist_hint_notas"
        android:textAppearance="@style/ItemMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/tvNombre"
        app:layout_constraintStart_toStartOf="@id/tvNombre"
        app:layout_constraintTop_toBottomOf="@id/tvNombre" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvNombre" />

</androidx.constraintlayout.widget.ConstraintLayout>